<resources>
    <string name="app_name">lotMoney</string>


    <string name="main_tab_home">首页</string>
    <string name="main_tab_shopping_car">购物车</string>
    <string name="main_tab_mine">我的</string>
    <string name="again_exit">再按一次退出</string>

    <!--我的-->
    <string name="my_integral">我的积分</string>
    <string name="my_all_orders">全部订单</string>
    <string name="my_all">全部</string>
    <string name="my_obligation">待付款</string>
    <string name="my_send_the_goods">待发货</string>
    <string name="my_wait_for_receiving">待收货</string>
    <string name="my_after_sale">人工售后</string>
    <string name="my_commonly_used_function">常用功能</string>
    <string name="my_clear_cache">清理缓存</string>
    <string name="my_shopping_address">收货地址</string>
    <string name="my_default_address">默认地址</string>
    <string name="my_add_new_address_title">添加新地址</string>
    <string name="my_address">地址:</string>
    <string name="my_add_new_address">+添加新地址</string>
    <string name="my_shopping_consignee">收货人:</string>
    <string name="my_add_new_address_consignee">地址人</string>
    <string name="my_add_new_address_phone">联系电话</string>
    <string name="my_add_new_address_area">所在地区</string>
    <string name="my_add_new_address_street">街道</string>
    <string name="my_add_new_address_detail_address">详细地址</string>
    <string name="my_add_new_address_default">设为默认地址</string>
    <string name="my_add_new_address_choose">请选择</string>
    <string name="my_add_new_address_edit">请填写</string>
    <string name="my_add_new_address_edit_consignee_name">请填写收货人姓名</string>
    <string name="my_add_new_address_edit_consignee_phone">请填写收货人电话</string>
    <string name="my_save">保存</string>
    <string name="my_touch_service">联系客服</string>
    <string name="my_person_service">人工客服</string>
    <string name="my_view_logistics">查看物流</string>
    <string name="my_delivery_method">配送方式</string>
    <string name="my_delivery_method_check">完成下单可在我的订单里查看</string>
    <string name="my_fill_in_background">后台填写</string>
    <string name="my_order_number">订单编号</string>
    <string name="my_standard">规格</string>
    <string name="my_pay_way">支付方式</string>
    <string name="my_payable_amount">应付款金额:</string>
    <string name="my_confirm_payment">确认付款</string>
    <string name="my_choose_charge_way">可选择币种、微信、支付宝、多种支付方式，请点击下方
确认付款，详情和人工联系～</string>
    <string name="my_order_integral">该订单完成后您将获得48积分，一元等于一积分，满一100免费
。</string>


    <!--购物车-->
    <string name="shopping_car_clear">清空购物车</string>
    <string name="shopping_car_edit">编辑</string>
    <string name="shopping_car_integral">积分可抵扣运费，也可转给他人</string>
    <string name="shopping_car_all_choose">全选</string>
    <string name="shopping_car_total">合计：</string>
    <string name="shopping_car_close_an_account">结算</string>
    <string name="shopping_car_sale_out">已销售：</string>
    <string name="shopping_car_repertory">库存：</string>

    <!--首页-->
    <string name="home_recent_search">最近搜索</string>
    <string name="home_input_search_product_name">请输入搜索商品名称</string>
    <string name="home_search">搜索</string>
    <string name="home_cancel">取消</string>
    <string name="home_search_sales_volume">销量</string>
    <string name="home_search_new_product">最新</string>


</resources>
