<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include
        android:id="@+id/title"
        layout="@layout/base_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/color_f8f8f8" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_5d6b85"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_location" />

                <RelativeLayout
                    android:id="@+id/rl_shopping_consignee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_location">

                    <TextView
                        android:id="@+id/tv_consignee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/my_shopping_consignee"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_shopping_consignee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tv_consignee"
                        android:text="悟空"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_shopping_address_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="42dp"
                        android:text="16534546545"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_my_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_shopping_consignee"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="7dp"
                    android:layout_toRightOf="@+id/iv_location"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_address"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_shopping_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="浙江-杭州-下城区 好家电家具"
                        android:textColor="@color/white" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_shopping_address_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/ic_shopping_address_edit" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_f8f8f8"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_product_url"
                    android:layout_width="69dp"
                    android:layout_height="65dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_te"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="40dp"
                    android:layout_toLeftOf="@+id/tv_product_price"
                    android:layout_toRightOf="@+id/iv_product_url"
                    android:maxLines="4"
                    android:text="RIO（瑞沃）鸡尾酒330ml’灌装8连包4种口味"
                    android:textColor="@color/color_606060" />


                <TextView
                    android:id="@+id/tv_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="¥48.00"
                    android:textColor="@color/color_c10037" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_product_price"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="X1"
                    android:textColor="@color/color_9e9e9e" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_delivery_method"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_delivery_method_check"
                    android:textColor="@color/color_9b9b9b" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_f8f8f8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_standard"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_fill_in_background"
                    android:textColor="@color/color_9b9b9b" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_f8f8f8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order_number"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="123123123123123"
                    android:textColor="@color/color_9b9b9b" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/color_f8f8f8" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/my_pay_way"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_d8d8d8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_choose_nor"
                    android:drawableLeft="@drawable/ic_choose_nor"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="25dp"
                    android:text="@string/my_choose_charge_way"
                    android:textColor="@color/color_606060"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/color_f8f8f8"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person_service" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_person_service"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/my_order_integral"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingRight="10dp"
                android:text="运费：¥18.0元"
                android:textColor="@color/color_base_red" />


        </LinearLayout>


    </ScrollView>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_account_bg"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_toLeftOf="@+id/tv_confirm_payment"
            android:gravity="center"
            android:text="应付款金额：¥63，00"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_confirm_payment"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:background="@color/color_base_red"
            android:gravity="center"
            android:text="@string/my_confirm_payment"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>

