<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eff3f6"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/base_title" />

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="end"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="end|center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/shopping_car_edit"
            android:textColor="@color/color_c4c4c2"
            android:textSize="12sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_bottom"
        android:layout_below="@+id/ll_edit"
        android:descendantFocusability="blocksDescendants"
        android:visibility="visible"
        app:srlAccentColor="@color/color_base_red"
        app:srlEnableFooterFollowWhenLoadFinished="true"
        app:srlEnableScrollContentWhenLoaded="true"
        tools:ignore="MissingConstraints">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shopping_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_f4f4f4"
            android:textColor="@color/color_464646" />

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:srlAccentColor="@color/color_464646"
            app:srlClassicsSpinnerStyle="Translate" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/cb_all_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="false"
                android:drawableStart="@drawable/shopping_car_choose"
                android:drawableLeft="@drawable/shopping_car_choose"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/shopping_car_all_choose"
                android:textColor="@color/color_4a4a4a"
                android:textSize="12sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_close_an_account"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/color_base_red"
            android:gravity="center"
            android:text="@string/shopping_car_close_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_all_money"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/tv_close_an_account"
            android:gravity="center"
            android:text="¥0.0"
            android:textColor="@color/color_ff4040"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/tv_all_money"
            android:gravity="center"
            android:text="@string/shopping_car_total"
            android:textColor="@color/color_4a4a4a"
            android:textSize="12sp" />


    </RelativeLayout>


</RelativeLayout>

